[gd_scene load_steps=4 format=3 uid="uid://c0m6mdl1wv08f"]

[ext_resource type="Script" uid="uid://b148fd4lni6nl" path="res://scripts/MainMenu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.651, 0.506, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.525, 0.388, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.298, 0.431, 0.659, 1)

[node name="Ground" type="ColorRect" parent="."]
offset_top = 620.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.784, 0.659, 1, 1)

[node name="TitleLabel" type="Label" parent="."]
offset_top = 180.0
offset_right = 1280.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(1, 0.439, 0.506, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.1, 0.3, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 96
text = "MAXIFLOP"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 490.0
offset_top = 460.0
offset_right = 790.0
offset_bottom = 530.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "Play
"

[node name="QuitButton" type="Button" parent="."]
offset_left = 540.0
offset_top = 550.0
offset_right = 740.0
offset_bottom = 610.0
theme_override_colors/font_color = Color(0.933, 0.933, 0.933, 0.8)
theme_override_font_sizes/font_size = 20
text = "Quit
"

[connection signal="pressed" from="StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_pressed"]
